# XgenAudio

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
controller/: router.py  sttController.py  ttsController.py
controller/helper/: controllerHelper.py  singletonHelper.py
service/database/: Database_README.md  connection.py  database_manager.py  logger_helper.py
service/redis/: config_utils.py  redis_config_manager.py
service/redis_client/: redis_README.md  redis_config_manager.py
service/stt/: __init__.py  base_stt.py  huggingface_stt.py  stt_factory.py
service/tts/: __init__.py  base_tts.py  tts_factory.py  zonos_tts.py
service/tts/zonos/: conditioning.py  model.py  speaker_cloning.py
service/tts/zonos/backbone/: _torch.py
